tests/ui/feature-gates/unknown-feature.stderr
error[E0635]: unknown feature `unknown_rust_feature`
  --> $DIR/unknown-feature.rs:2:5
   |
LL |     unknown_rust_feature,
   |     ^^^^^^^^^^^^^^^^^^^^

error[E0635]: unknown feature `associated_types_default`
  --> $DIR/unknown-feature.rs:6:5
   |
LL |     associated_types_default,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0635]: unknown feature `core_intrnisics`
  --> $DIR/unknown-feature.rs:10:5
   |
LL |     core_intrnisics,
   |     ^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0635`.
